--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 
     <!-- Your backend API URL goes here -->
     <script>
-      const API = 'https://<your-backend-service>.onrender.com';
+      const API = 'https://career-scraper-backend.onrender.com';
     </script>
 
     <!-- Load JobDashboard -->
